--- a/app/Within/partAround/Index/Chain/styles.module.css
+++ b/app/Within/partAround/Index/Chain/styles.module.css
@@ -178,4 +178,7 @@
     overflow: hidden;
   }
 
+  .boxImg {
+    min-width: 81px;
+  }
 }
